--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
+    "@babel/eslint-parser": "^7.22.5",
+    "@babel/eslint-plugin": "^7.24.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   },
   "scripts": {
     "start": "react-scripts start",
